<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nasdanika.core</groupId>
	<version>2021.11.1</version>
	<artifactId>parent</artifactId>
	<packaging>pom</packaging>
	<name>Nasdanika Core Parent</name>
	<description>Parent pom.</description>

	<url>https://nasdanika.org</url>
		
	<licenses>
		<license>
			<name>Eclipse Public License 2.0</name>
			<url>https://nasdanika.org/builds/master/eclipse-public-license-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/Nasdanika/core</url>
	</scm>

	<properties>
		<jacoco.version>0.8.7</jacoco.version>
	</properties>	

	<build>
	    <extensions>
	      <extension>
	        <groupId>org.apache.maven.wagon</groupId>
	         <artifactId>wagon-ssh</artifactId>
	         <version>3.4.3</version>
	      </extension>
	    </extensions>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>	
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>								
                        <plugin>
                              <groupId>pl.project13.maven</groupId>
                              <artifactId>git-commit-id-plugin</artifactId>
                              <version>3.0.1</version>
                        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
			
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<organization>
		<name>Nasdanika</name>
		<url>https://github.com/Nasdanika</url>
	</organization>

	<developers>
		<developer>
			<id>pvlasov</id>
			<name>Pavel Vlasov</name>
			<email>Pavel.Vlasov@nasdanika.org</email>
			<roles>
				<role>Lead Developer</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
	</developers>
	
	<modules>
		<module>common</module>
		<module>ncore</module>
		<module>flow</module>
		<module>diagram</module>
		<module>diagram.gen</module>
		<module>exec</module>
		<module>exec.gen</module>
		<module>cli</module>
		<module>emf</module>
		<module>mxgraph</module>
	</modules>	

	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>	
</project>